feat: sign upの削除
