# api/interfaces/http/routers/auth_handler.go
@@ -5,28 +5,7 @@ import (
 	"github.com/famiphoto/famiphoto/api/interfaces/http/sessions"
 	"github.com/labstack/echo/v4"
 	"net/http"
-	"time"
 )
-
-func (h *handler) AuthPostSignUp(ctx echo.Context) error {
-	req := new(schema.AuthSignUpRequest)
-	if err := h.bind(ctx, req); err != nil {
-		return err
-	}
-
-	isAdmin := req.GetIsAdminOrDefault(false)
-
-	user, err := h.authUseCase.SignUp(ctx.Request().Context(), req.UserId, req.Password, isAdmin, time.Now())
-	if err != nil {
-		return err
-	}
-
-	res := &schema.AuthSignUpResponse{
-		IsAdmin: user.IsAdmin,
-		UserId:  user.UserID,
-	}
-	return ctx.JSON(http.StatusOK, res)
-}
 
 func (h *handler) AuthPostSignIn(ctx echo.Context) error {
 	req := new(schema.AuthSignInRequest)
